<resources>
    <string name="app_name">Mobile-RC</string>
    <string name="menu_settings">Settings</string>
    <string name="wrong_value">Wrong value!</string>
    <string name="wrong_ext">Wrong extension!</string>
    <string name="category_path">Path</string>
    <string name="category_security">Security</string>
    <string name="category_cam">IP Webcam</string>
    <string name="category_battery">Battery</string>
    <string name="category_other">Other</string>
    <string name="title_address">Address</string>
    <string name="title_port">Port</string>
    <string name="title_ca">Authority</string>
    <string name="title_crt">Certificate</string>
    <string name="title_key">Key</string>
    <string name="title_cam_port">Port</string>
    <string name="title_cam_user">User</string>
    <string name="title_cam_password">Password</string>
    <string name="title_inspected_stream">Inspected stream</string>
    <string name="title_password">Certificate password</string>
    <string name="title_refresh_interval">Refresh interval</string>
    <string name="title_reconnect_delay">Reconnect delay</string>
    <string name="title_additional_degree">Additional degree</string>
    <string name="title_vehicle">Vehicle</string>
    <string name="title_force_connect">Forced connection</string>
    <string name="title_offline">Offline</string>
    <string name="title_max_voltage">Max Voltage</string>
    <string name="title_min_voltage">Min Voltage</string>
    <string name="title_keep_adb">Keep ADB</string>
    <string name="summary_address">Edit server address</string>
    <string name="summary_port">Edit server port</string>
    <string name="summary_ca">Search Certificate Authority</string>
    <string name="summary_crt">Search public key</string>
    <string name="summary_key">Search private key</string>
    <string name="summary_cam_port">Edit server port</string>
    <string name="summary_cam_user">Edit server user</string>
    <string name="summary_cam_password">Edit server password</string>
    <string name="summary_inspected_stream">Use inspected, but slower stream</string>
    <string name="summary_password">Edit optional password</string>
    <string name="summary_refresh_interval">Edit refresh interval</string>
    <string name="summary_reconnect_delay">Edit reconnect delay</string>
    <string name="summary_additional_degree">Edit additional degree</string>
    <string name="summary_vehicle">Select vehicle</string>
    <string name="summary_offline">Offline mode</string>
    <string name="summary_max_voltage">Maximum voltage-limit</string>
    <string name="summary_min_voltage">Minimum voltage-limit</string>
    <string name="summary_keep_adb">Keep USB debugging on</string>
    <string name="text_start">Start</string>
    <string name="text_stop">Stop</string>
    <string name="err_1">Connection error.</string>
    <string name="err_2">Connection lost.</string>
    <string name="err_3">Connection refused.</string>
    <string name="err_4">Invalid certificate.</string>
    <string name="err_5">IP Webcam has been closed.</string>
    <string name="err_6">IP Webcam server is unreachable.</string>
    <string name="err_7">Wrong client version.</string>
    <string name="err_8">Wrong certificate settings.</string>
    <string name="err_9">Wrong certificate password.</string>
    <string name="set_config">Please, set a correct configuration.</string>
    <string name="set_adb">Please, enable USB debugging.</string>
    <string name="set_network">Please, select a wireless network.</string>
    <string name="set_gps">Please, enable the GPS sensor.</string>
    <string name="install_cam">Please, install the IP Webcam app.</string>
    <string name="sdcard_not_mounted">SD-card is not mounted.</string>
    <string name="vehicle">Vehicle</string>
    <string name="bridge_conn">Bridge connection</string>
    <string name="exists">exists</string>
    <string name="not_exists">not exists</string>
    <string name="connecting">connecting</string>
    <string name="run_in_background">Run in background</string>
    <string name="title_connecting">Please, wait</string>
    <string name="message_connecting">Connecting to the Bridge&#8230;</string>
    <string name="author">Author</string>
    <string name="neptun_id">Neptun id</string>
</resources>
