<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_path">
        <EditTextPreference
            android:key="address"
            android:title="@string/title_address"
            android:summary="@string/summary_address"
            android:inputType="textUri"
            android:defaultValue="10.0.2.2"
            android:dependency="offline" />
        <EditTextPreference
            android:key="port"
            android:title="@string/title_port"
            android:summary="@string/summary_port"
            android:maxLength="5"
            android:inputType="number"
            android:defaultValue="8443"
            android:dependency="offline" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_security">
        <org.dyndns.fzoli.android.preference.FilePreference
            android:id="@+id/file_ca"
            android:key="ca"
            android:title="@string/title_ca"
            android:summary="@string/summary_ca"
            android:dependency="offline" />
        <org.dyndns.fzoli.android.preference.FilePreference
            android:id="@+id/file_crt"
            android:key="crt"
            android:title="@string/title_crt"
            android:summary="@string/summary_crt"
            android:dependency="offline" />
        <org.dyndns.fzoli.android.preference.FilePreference
            android:id="@+id/file_key"
            android:key="key"
            android:title="@string/title_key"
            android:summary="@string/summary_key"
            android:dependency="offline" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_cam">
        <EditTextPreference
            android:key="cam_port"
            android:title="@string/title_cam_port"
            android:summary="@string/summary_cam_port"
            android:maxLength="5"
            android:inputType="number"
            android:defaultValue="8080"
            android:dependency="offline" />
        <EditTextPreference
            android:key="cam_user"
            android:title="@string/title_cam_user"
            android:summary="@string/summary_cam_user"
            android:maxLength="20"
            android:inputType="text"
            android:defaultValue=""
            android:dependency="offline" />
        <EditTextPreference
            android:key="cam_password"
            android:title="@string/title_cam_password"
            android:summary="@string/summary_cam_password"
            android:maxLength="20"
            android:inputType="textPassword"
            android:defaultValue=""
            android:dependency="cam_user" />
        <CheckBoxPreference
            android:key="inspected_stream"
            android:title="@string/title_inspected_stream"
            android:summary="@string/summary_inspected_stream"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_battery">
        <EditTextPreference
            android:key="max_voltage"
            android:title="@string/title_max_voltage"
            android:summary="@string/summary_max_voltage"
            android:maxLength="4"
            android:inputType="numberDecimal"
            android:defaultValue="2.42"
            android:dependency="offline" />
        <EditTextPreference
            android:key="min_voltage"
            android:title="@string/title_min_voltage"
            android:summary="@string/summary_min_voltage"
            android:maxLength="4"
            android:inputType="numberDecimal"
            android:defaultValue="2.12"
            android:dependency="offline" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_other">
        <ListPreference
            android:key="vehicle"
            android:title="@string/title_vehicle"
            android:summary="@string/summary_vehicle"
            android:defaultValue="0"
            android:entries="@array/vehicleNames"
            android:entryValues="@array/vehicleIndexes" />
        <ListPreference
            android:key="additional_degree"
            android:title="@string/title_additional_degree"
            android:summary="@string/summary_additional_degree"
            android:defaultValue="0"
            android:entries="@array/additionalDegreeNames"
            android:entryValues="@array/additionalDegreeValues"
            android:dependency="offline" />
        <EditTextPreference
            android:key="refresh_interval"
            android:title="@string/title_refresh_interval"
            android:summary="@string/summary_refresh_interval"
            android:maxLength="4"
            android:inputType="number"
            android:defaultValue="1000"
            android:dependency="offline" />
        <ListPreference
            android:key="reconnect_delay"
            android:title="@string/title_reconnect_delay"
            android:summary="@string/summary_reconnect_delay"
            android:defaultValue="20000"
            android:entries="@array/reconnectDelayNames"
            android:entryValues="@array/reconnectDelayValues"
            android:dependency="offline" />
        <EditTextPreference
            android:key="password"
            android:title="@string/title_password"
            android:summary="@string/summary_password"
            android:inputType="textPassword"
            android:defaultValue=""
            android:dependency="offline" />
        <CheckBoxPreference
            android:key="force_connect"
            android:title="@string/title_force_connect"
            android:defaultValue="false"
            android:dependency="offline" />
        <CheckBoxPreference
            android:key="offline"
            android:title="@string/title_offline"
            android:summary="@string/summary_offline"
            android:defaultValue="false"
            android:disableDependentsState="true" />
    </PreferenceCategory>
</PreferenceScreen>
